# midas-journal-770

__MACOSX/itkResampleInPlaceImageFilter/Insight/Testing/Data/: ._NOTE.txt
itkResampleInPlaceImageFilter/: CMakeLists.txt
itkResampleInPlaceImageFilter/Insight/: CMakeLists.txt
itkResampleInPlaceImageFilter/Insight/Code/: CMakeLists.txt
itkResampleInPlaceImageFilter/Insight/Code/Review/: itkResampleInPlaceImageFilter.h  itkResampleInPlaceImageFilter.txx
itkResampleInPlaceImageFilter/Insight/Documentation/Latex/: itkResampleInPlaceImageFilter.tex
itkResampleInPlaceImageFilter/Insight/Testing/: CMakeLists.txt
itkResampleInPlaceImageFilter/Insight/Testing/Code/: CMakeLists.txt  itkBasicFiltersTests.cxx  itkResampleInPlaceImageFilterTest.cxx
itkResampleInPlaceImageFilter/Insight/Testing/Data/: NOTE.txt
